# cinnamon-extensions-extended-places-menu

./: Makefile.am  README  README.md  autogen.sh  cinnamon-epmupdater  configure.ac
debian/: changelog  control.in  copyright
js/: Makefile.am  placeDisplay.js
po/: LINGUAS  POTFILES.in  es_ES.po  nl.po  ru.po
policy/: Makefile.am  org.freedesktop.policykit.pkexec.cinnamon.nautilus-run.policy.in
src/: Makefile.am  extension.js  metadata.json.in  org.cinnamon.extensions.extended-places-menu.gschema.xml.in
